fix: scrollbar height for horizontal scroll
- add variable for scrollbar height

--- a/src/styles/less/_elements/_element.scrollbar.less
+++ b/src/styles/less/_elements/_element.scrollbar.less
@@ -10,7 +10,7 @@
 ::-webkit-scrollbar {
     background-color: var(--background-scrollbar);
     width: var(--width-scrollbar);
-    height: 0;
+    height: var(--height-scrollbar);
 }
 
 ::-webkit-scrollbar-button {
