--- a/src/styles/less/_settings/_setting.core.less
+++ b/src/styles/less/_settings/_setting.core.less
@@ -16,6 +16,7 @@
     --height-header-app: 48px;
     --height-footer: auto;
     --height-footer-app: 48px;
+    --height-scrollbar: 8px;
 
     // Widths
     --width-logo: 48px;
